<resources>
    <string name="app_name">Pubspot</string>
    <string name="button_addPub">Add Pub</string>
    <string name="hint_pubName">Pub Name</string>
    <string name="hint_pubDescription">Description</string>
    <string name="menu_addPub">Add</string>
    <string name="menu_cancelPub">Cancel</string>
    <string name="menu_deletePub">Delete</string>
    <string name="enter_pub_name"> Please enter a pub name </string>
    <string name="save_pub"> Save Pub </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_pub_image">Select pub image</string>
    <string name="change_pub_image">Change pub image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="button_set_tags">Set Tags</string>
    <string name="menu_doneTags">Done</string>
    <string name="menu_cancelTags">Cancel</string>
    <string name="tag_wifi">Wi-Fi</string>
    <string name="tag_dog_friendly">Dog Friendly</string>
    <string name="tag_food_served">Food Served</string>
    <string name="tag_wheelchair_accessible">Wheelchair Accessible</string>
    <string name="dialog_set_image">Do you want to choose an image or take a photo?</string>
    <string name="choice_choose_image">Choose an image</string>
    <string name="choice_take_photo">"Take a photo"</string>
    <string name="login_signup">Log in or Sign up</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_error">Login error - are your credentials correct?</string>
</resources>