<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/change_pub_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pubName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/imageIcon"
            android:textSize="30sp"
            tools:text="A Pub Name" />

        <RatingBar style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pubName"
            android:layout_toRightOf="@id/imageIcon"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:layout_toRightOf="@id/imageIcon"
            tools:text="A Pub Description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="5dp"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/tag_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tag_wifi,tag_wheelchair_accessible,tag_dog_friendly,tag_food_served"
                app:flow_horizontalAlign="start"
                app:flow_horizontalBias="0"
                app:flow_maxElementsWrap="3"
                app:flow_verticalBias="0"
                app:flow_verticalGap="3dp"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tag_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tag_back"
                android:padding="2dp"
                tools:text="@string/tag_wifi"
                android:text="@string/tag_wifi"/>

            <TextView
                android:id="@+id/tag_wheelchair_accessible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@drawable/tag_back"
                tools:text="@string/tag_wheelchair_accessible"
                android:text="@string/tag_wheelchair_accessible"/>

            <TextView
                android:id="@+id/tag_dog_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@drawable/tag_back"
                tools:text="@string/tag_dog_friendly"
                android:text="@string/tag_dog_friendly"/>

            <TextView
                android:id="@+id/tag_food_served"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@drawable/tag_back"
                tools:text="@string/tag_food_served"
                android:text="@string/tag_food_served"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>